--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -7,7 +7,7 @@
     {% else %}
     	{{ site.banner }}
     {% endif %}
-      <div id="search-container">
+      <div id="search-container" class="pull-right">
           <input type="text" id="search-input" placeholder=" Search...">
           <label class="searchIcon" for="search-input"></label>
           <ul id="results-container"></ul>
