--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,6 @@
 </footer>
 <script src="http://apps.bdimg.com/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script src="{{ '/styles/js/search.min.js' | prepend: site.baseurl }}"></script>
+<script src="{{ '/styles/js/function.min.js' | prepend: site.baseurl }}"></script>
 <script src="{{ '/styles/js/lessismore.js' | prepend: site.baseurl }}"></script>
 <script src="{{ '/styles/js/application.min.js' | prepend: site.baseurl }}"></script>
