--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -932,7 +932,7 @@ textarea.input-group-sm>.form-control,textarea.input-group-sm>.input-group-addon
 }
 .navbar-inverse .navbar-link{color:#b9c8e0}
 .navbar-inverse .navbar-link:hover{color:#fff}
-.breadcrumb{list-style:none}
+.breadcrumb{list-style:none;padding-left: 22px}
 .breadcrumb>li+li:before{content:"/\00a0";padding:0 5px;color:#ccc}
 .breadcrumb>.active{color:#999}
 .pagination{position:relative;padding-left:0;margin:10px 0;border-radius:4px;left:50%;transform:translateX(-50%)}
@@ -1415,7 +1415,7 @@ hr{margin-top:20px;margin-bottom:20px;border:0;border-top:1px solid #eee}
 .docs-section+.docs-section{padding-top:40px}
 .sidebar{display:none}
 .sidebar.affix{position:static}
-.sidenav{margin-top:30px;margin-bottom:30px;padding-top:10px;padding-bottom:10px;text-shadow:0 1px 0 rgba(255,255,255,.5);background-color:#f7f7f7;border-radius:5px}
+.sidenav{padding-top:10px;padding-bottom:10px;text-shadow:0 1px 0 rgba(255,255,255,.5);background-color:#f7f7f7;border-radius:5px}
 .sidebar .nav>li>a{display:block;color:#36556e;padding:5px 20px}
 .sidebar .nav>li>a:focus,.sidebar .nav>li>a:hover{text-decoration:none;background-color:#e8ebee;border-right:1px solid #d8dde2}
 .sidebar .nav>.active:focus>a,.sidebar .nav>.active:hover>a,.sidebar .nav>.active>a{font-weight:700;color:#1d365d;background-color:transparent;border-right:1px solid #1d365d}
@@ -1698,7 +1698,7 @@ to{transform:translateY(0) scale(1);opacity:1}
 .zoomify.zoomed{cursor:-webkit-zoom-out;cursor:zoom-out;padding:0;margin:0;border:none;border-radius:0;box-shadow:none;position:relative;z-index:1501}
 .zoomify-shadow{position:fixed;top:0;left:0;right:0;bottom:0;width:100%;height:100%;display:block;z-index:1500;background:rgba(0,0,0 ,.4);opacity:0}
 .zoomify-shadow.zoomed{opacity:1;cursor:pointer;cursor:-webkit-zoom-out;cursor:zoom-out}
-
+.head-t{margin: 4px 0 16px;padding: 0}
 .title-border{border-left: 8px solid #4183c4;margin-left:0;padding-left: 16px}
 #posts-list {
     list-style-type: none;
@@ -1707,8 +1707,8 @@ to{transform:translateY(0) scale(1);opacity:1}
     border-left: 8px solid #4183c4;
 }
 
-#posts-list li {
-    margin: 16px 0;
+.posts-list-item {
+    padding: 8px 0;
     position: relative;
 }
 
@@ -1738,12 +1738,10 @@ to{transform:translateY(0) scale(1);opacity:1}
     position: absolute;
 }
 
-.tooltip, .tooltip-inner {
-    width: 500px;
-}
+
 
 .posts-list-name {
-    font-size: 25px;
+    font-size: 20px;
     text-decoration: none;
     opacity: 0.8;
 }
