--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,7 +31,7 @@
             <li><a rel="nofollow" target="_blank" href="{{site.resume_site}}">关于我</a></li>
             <li><a rel="nofollow" href="{{ '/books' | prepend: site.baseurl }}">我的书单</a></li>
             <li class="divider"></li>
-            <li><a rel="nofollow" href="{{ '/reference' | prepend: site.baseurl }}">推荐博客</a></li>
+            <li><a rel="nofollow" href="{{ '/reference' | prepend: site.baseurl }}">前端导航</a></li>
           </ul>
         </li>
       </ul>
