--- a/_layouts/copy.html
+++ b/_layouts/copy.html
@@ -22,3 +22,17 @@ layout: default
         </div>
     </div>
 </div>
+
+<h4 class="btn btn-success btn-lg">素材综合<h4>
+    <ol class="rounded-list">
+        <li><a href="http://cn.365psd.com/" target="_blank" title="每天更新的PSD素材下载！">365PSD</a></li>
+        <li><a href="https://www.brusheezy.com/" target="_blank" title="国外大量优质笔刷、背景免费下载">Brusheezy</a></li>
+        <li><a href="http://backgroundlabs.com/" target="_blank" title="背景实验室，通过标签、颜色、风格检索背景图案">Backgroundlabs</a></li>
+        <li><a href="http://freebiesbug.com/" target="_blank" title="国外较高质量矢量、PSD、图片素材免费下载">Freebiesbug</a></li>
+        <li><a href="" target="_blank" title=""></a></li>
+        <li><a href="" target="_blank" title=""></a></li>
+        <li><a href="" target="_blank" title=""></a></li>
+        <li><a href="" target="_blank" title=""></a></li>
+        <li><a href="" target="_blank" title=""></a></li>
+        <li><a href="" target="_blank" title=""></a></li>
+    </ol>
