--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,9 +11,10 @@
       </a>
     </div>
     <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
-      <ul class="nav navbar-nav">    
+      <ul class="nav navbar-nav">
+        <li></li>
         <li>
-          <a href="{{ '/' | prepend: site.baseurl }}">Home</a>
+          <a href="{{ '/' | prepend: site.baseurl }}">首页</a>
         </li>
         <li>
           <a href="{{ '/categories/' | prepend: site.baseurl }}">授人以渔</a>
@@ -23,17 +24,9 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="{{ '/donate/' | prepend: site.baseurl }}"><strong>打赏作者</strong></a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">关于<b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a rel="nofollow" target="_blank" href="{{site.github}}">Github</a></li>
-            <li><a rel="nofollow" target="_blank" href="{{site.resume_site}}">关于我</a></li>
-            <li><a rel="nofollow" href="{{ '/books' | prepend: site.baseurl }}">我的书单</a></li>
-            <li class="divider"></li>
-            <li><a rel="nofollow" href="{{ '/reference' | prepend: site.baseurl }}">前端导航</a></li>
-          </ul>
-        </li>
+        <li><a rel="nofollow" href="{{ '/reference' | prepend: site.baseurl }}">前端导航</a></li>
+        <li><a href="{{ '/donate/' | prepend: site.baseurl }}">打赏作者</a></li>
+        <li><a rel="nofollow" target="_blank" href="{{site.resume_site}}">关于我</a></li>
       </ul>
     </nav>
   </div>
