--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -1724,3 +1724,6 @@ to{transform:translateY(0) scale(1);opacity:1}
 .rectangle-list a:before{content:counter(li);counter-increment:li;position:absolute;left:-2.4em;top:50%;margin-top:-1em;background:#87abfa;height:2em;width:2em;line-height:2em;text-align:center;font-weight:700}
 .rectangle-list a:after{position:absolute;content:'';border:.5em solid transparent;left:-1em;top:50%;margin-top:-.5em;-webkit-transition:all .3s ease-out;-moz-transition:all .3s ease-out;-ms-transition:all .3s ease-out;-o-transition:all .3s ease-out;transition:all .3s ease-out}
 .rectangle-list a:hover:after{left:-.5em;border-left-color:#87abfa}
+#tagscloud{height:200px;position:relative;font-size:12px;text-align:center}
+#tagscloud a{position:absolute;top:0px;left:0px;color: #fff;background-color: #2a485d;text-decoration:none;margin:0 10px 15px 0;line-height:18px;padding:1px 5px;display:inline-block;border-radius:3px}
+#tagscloud a:hover{color:#fff;background:#0099ff}
