--- a/_includes/docs_header.html
+++ b/_includes/docs_header.html
@@ -1,5 +1,5 @@
 <div class="docs-header pa" id="content">
-    <canvas id="mycanvas">你的浏览器不支持canvas</canvas>
+    <canvas id="mycanvas">您的浏览器不支持canvas</canvas>
     <div class="container" >
   	{% if page.title == 'Love Light' %}
         <h1>{{ site.name }}</h1>
