--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,9 +24,15 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a rel="nofollow" href="{{ '/reference' | prepend: site.baseurl }}">前端导航</a></li>
-        <li><a href="{{ '/donate/' | prepend: site.baseurl }}">打赏作者</a></li>
-        <li><a rel="nofollow" target="_blank" href="{{site.resume_site}}">关于我</a></li>
+        <li><a  href="{{ '/reference' | prepend: site.baseurl }}">前端导航</a></li>
+        <li><a  href="{{ '/effects' | prepend: site.baseurl }}">案例欣赏</a></li>
+        <li class="dropdown">
+          <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">ABOUT<b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a rel="nofollow" target="_blank" href="{{site.resume_site}}">关于我</a></li>
+            <li><a href="{{ '/donate/' | prepend: site.baseurl }}">打赏作者</a></li>
+          </ul>
+        </li>
       </ul>
     </nav>
   </div>
