--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -1292,7 +1292,7 @@ body{position:relative;padding-top:50px}
 .bs-example-popover{padding-bottom:24px;background-color:#f9f9f9}
 .bs-example-popover .popover{position:relative;display:block;float:left;width:260px;margin:20px}
 .scrollspy-example{position:relative;height:200px;margin-top:10px;overflow:auto}
-.ad,.bs-glyphicons,.docs-content,.sr-only{overflow:hidden}
+.ad,.bs-glyphicons,.sr-only{overflow:hidden}
 .highlight{padding:9px 14px;margin-bottom:14px;background-color:#f7f7f9;border:1px solid #e1e1e8;border-radius:4px}
 .highlight pre{padding:0;margin-top:0;margin-bottom:0;border:0;white-space:nowrap}
 .highlight pre code{font-size:inherit}
@@ -1696,7 +1696,7 @@ to{transform:translateY(0) scale(1);opacity:1}
 .highlighter-rouge .highlight .il{color:#B452CD}
 .zoomify{cursor:-webkit-zoom-in;cursor:zoom-in}
 .zoomify.zoomed{cursor:-webkit-zoom-out;cursor:zoom-out;padding:0;margin:0;border:none;border-radius:0;box-shadow:none;position:relative;z-index:1501}
-.zoomify-shadow{position:fixed;top:0;left:0;right:0;bottom:0;width:100%;height:100%;display:block;z-index:1500;background:rgba(0,0,0 ,.4);opacity:0}
+.zoomify-shadow{position:fixed;top:0;left:0;right:0;bottom:0;width:100%;height:100%;display:block;z-index:1500;background:rgba(0,0,0 ,.6);opacity:0}
 .posts-content,.posts-list-item{position:relative}
 .zoomify-shadow.zoomed{opacity:1;cursor:pointer;cursor:-webkit-zoom-out;cursor:zoom-out}
 .head-t{margin:4px 0 16px;padding:0}
