--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -1727,3 +1727,4 @@ to{transform:translateY(0) scale(1);opacity:1}
 #tagscloud{height:200px;position:relative;font-size:12px;text-align:center}
 #tagscloud a{position:absolute;top:0px;left:0px;color: #fff;background-color: #2a485d;text-decoration:none;margin:0 10px 15px 0;line-height:18px;padding:1px 5px;display:inline-block;border-radius:3px}
 #tagscloud a:hover{color:#fff;background:#0099ff}
+.mt12{margin-top:12px}
