--- a/_includes/e-head.html
+++ b/_includes/e-head.html
@@ -10,7 +10,7 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="author" contect="DoubleRay.Wang, DoubleRay.Wang@gmail.com">
     <meta name="robots" content="index,follow">
-    <link rel="shortcut icon" href="{{ '/styles/images/favicon.png' | prepend: site.baseurl }}">
+    <link rel="shortcut icon" href="{{ '/styles/images/favicon.ico' | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ site.url | replace:'index.html','' | prepend: site.baseurl }}">
     <!--[if lte IE 9]>
     <script src="http://apps.bdimg.com/libs/html5shiv/3.7/html5shiv.min.js"></script>
