--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,8 +10,8 @@
 	<meta name="msapplication-tap-highlight" content="no">
 	<meta name="author" contect="DoubleRay.Wang, DoubleRay.Wang@gmail.com">
 	<meta name="robots" content="index,follow">
-	<link rel="shortcut icon" href="{{ '/styles/images/favicon.png' | prepend: site.baseurl }}">
-	<link rel="icon" href="{{ '/styles/images/favicon.png' | prepend: site.baseurl }}">
+	<link rel="shortcut icon" href="{{ '/styles/images/favicon.ico' | prepend: site.baseurl }}">
+	<link rel="icon" href="{{ '/styles/images/favicon.ico' | prepend: site.baseurl }}">
 	<link rel="stylesheet" href="{{ '/styles/css/index.css' | prepend: site.baseurl }}">
 	<link rel="stylesheet" href="{{ '/styles/css/fontawesome/css/font-awesome.min.css' | prepend: site.baseurl }}">
 	<link rel="canonical" href="{{ site.url | replace:'index.html','' | prepend: site.baseurl }}">
