--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a  href="{{ '/reference' | prepend: site.baseurl }}">前端导航</a></li>
-        <li><a  href="{{ '/effects' | prepend: site.baseurl }}">案例欣赏</a></li>
+        <li><a  href="{{ '/effects' | prepend: site.baseurl }}">效果案例</a></li>
         <li class="dropdown">
           <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">ABOUT<b class="caret"></b></a>
           <ul class="dropdown-menu">
