--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -1215,16 +1215,19 @@ body{position:relative;padding-top:50px}
 .bs-social-buttons .twitter-share-button{width:98px!important}
 .github-btn{border:0;overflow:hidden}
 .postdate{margin-right:20px}
-#search-container{position:relative;width:262px;margin-right:-15px}
-#results-container{position:absolute;left:0;top:28px;list-style:none;margin:0;width:100%;z-index:998;padding-left:0;border-radius:0 0 5px 5px;background-color:#fff;box-shadow:0 0 1px #535353 inset}
-#results-container li{margin:0;width:100%;text-align:left;text-indent:1em}
+#search-container{position:relative;width:222px;margin-right:-15px}
+#results-container{position:absolute;left:0;top:28px;list-style:none;margin:0;width:100%;z-index:998;padding-left:0;border-radius:0 0 5px 5px;background-color:#fafafa;box-shadow:0 0 1px #404040 inset;counter-reset:li}
+#results-container li{padding:0 6px 0 16px;text-align:left;line-height:24px;position:relative}
+#results-container li:before{content:counter(li);counter-increment:li;position: absolute;
+    left: 6px;
+    top: 0;}
 #results-container a,.color-title{color:inherit;transition:all .3s}
 .color-title{border-left:6px solid #6f7071;padding-left:12px;font-weight:700}
 .color-title:hover{color:#999}
 #results-container li:hover{color:#252dff}
-#search-input{display:block;padding:6px;width:100%;border:1px solid #d3d3d3;font-size:12px;outline:0;line-height:1;box-sizing:border-box}
-.searchIcon{display:block;position:absolute;right:4%;top:18%;width:16px;height:16px;border:2px solid #7a7a7a;border-radius:50%;-webkit-transform:rotate(-45deg);transform:rotate(-45deg)}
-.searchIcon:before{content:' ';position:absolute;top:12px;left:5px;height:9px;width:2px;background-color:#7a7a7a}
+#search-input{display:block;padding:6px 6px 6px 2px;width:100%;border:none;border-bottom:1px solid #a09090;font-size:12px;outline:0;line-height:1;box-sizing:border-box;background-color:#fafafa}
+.searchIcon{display:block;position:absolute;right:4%;top:18%;width:16px;height:16px;border:2px solid #404040;border-radius:50%;-webkit-transform:rotate(-45deg);transform:rotate(-45deg)}
+.searchIcon:before{content:' ';position:absolute;top:12px;left:5px;height:9px;width:2px;background-color:#404040}
 @media (min-width:768px){.bs-social{text-align:left}
 .bs-social-buttons li:first-child{padding-left:0}
 }
